force-app/main/default/objects/Sales_Credit_Change__c/Sales_Credit_Change__c.object-meta.xml
<CustomObject>
    <description>Submit requests to change sales credit on a deal.</description>
    <label>Sales Credit Change</label>
    <nameField>
        <displayFormat>SCCR-{YYYY}{MM}-{0}</displayFormat>
        <label>Sales Credit Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Credit Changes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>