force-app/main/default/objects/Sales_Credit_Change__c/fields/Additional_Reps__c.field-meta.xml
<CustomField>
    <fullName>Additional_Reps__c</fullName>
    <inlineHelpText>Please add any additional reps</inlineHelpText>
    <label>Additional Reps</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>