force-app/main/default/objects/Sales_Credit_Change__c/fields/Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>Approver_Comments__c</fullName>
    <label>Approver Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>