force-app/main/default/objects/Sales_Credit_Change__c/fields/Change_Status__c.field-meta.xml
<CustomField>
    <fullName>Change_Status__c</fullName>
    <label>Change Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>