force-app/main/default/objects/Sales_Credit_Change__c/fields/Closed_Opp__c.field-meta.xml
<CustomField>
    <fullName>Closed_Opp__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Link to Opportunity that where credit was determined.</description>
    <inlineHelpText>Opportunity where credit was determined.</inlineHelpText>
    <label>Closed Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Credit Changes</relationshipLabel>
    <relationshipName>Sales_Credit_Changes</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>