force-app/main/default/objects/Sales_Credit_Change__c/fields/Commissions_Updated__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commissions Updated</label>
    <type>Checkbox</type>
</CustomField>