force-app/main/default/objects/Sales_Credit_Change__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <inlineHelpText>What happened and what needs to be changed</inlineHelpText>
    <label>Details</label>
    <type>TextArea</type>
</CustomField>