force-app/main/default/objects/Sales_Credit_Change__c/fields/Duplicate_Lead_Opp_URL_2__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Lead_Opp_URL_2__c</fullName>
    <inlineHelpText>If there is more than 1 duplicate add second here, if you have more than these add to description</inlineHelpText>
    <label>Duplicate Lead/ Opp URL 2</label>
    <type>Url</type>
</CustomField>