force-app/main/default/objects/Sales_Credit_Change__c/fields/Duplicate_Lead_Opp_URL__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Lead_Opp_URL__c</fullName>
    <inlineHelpText>Use if there is a duplicate record</inlineHelpText>
    <label>Duplicate Lead/ Opp URL</label>
    <type>Url</type>
</CustomField>