force-app/main/default/objects/Sales_Credit_Change__c/fields/Extended_Rep_1__c.field-meta.xml
<CustomField>
    <fullName>Extended_Rep_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Extended Rep 1</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Extended Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Credit_Changes2</relationshipName>
    <type>Lookup</type>
</CustomField>