force-app/main/default/objects/Sales_Credit_Change__c/fields/Extended_Rep_2__c.field-meta.xml
<CustomField>
    <fullName>Extended_Rep_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Extended Rep 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Credit_Changes3</relationshipName>
    <type>Lookup</type>
</CustomField>