force-app/main/default/objects/Sales_Credit_Change__c/fields/Inside_Rep_1__c.field-meta.xml
<CustomField>
    <fullName>Inside_Rep_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inside Rep 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Credit_Changes</relationshipName>
    <type>Lookup</type>
</CustomField>