force-app/main/default/objects/Sales_Credit_Change__c/fields/Inside_Rep_1_Manager__c.field-meta.xml
<CustomField>
    <fullName>Inside_Rep_1_Manager__c</fullName>
    <formula>Inside_Rep_1__r.Manager.FirstName</formula>
    <label>Inside Rep 1 Manager</label>
    <type>Text</type>
</CustomField>