force-app/main/default/objects/Sales_Credit_Change__c/fields/Inside_Rep_2_Manager__c.field-meta.xml
<CustomField>
    <fullName>Inside_Rep_2_Manager__c</fullName>
    <formula>Inside_Rep_2__r.Manager.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inside Rep 2 Manager</label>
    <type>Text</type>
</CustomField>