force-app/main/default/objects/Sales_Credit_Change__c/fields/Outside_Rep_1__c.field-meta.xml
<CustomField>
    <fullName>Outside_Rep_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outside Rep 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Credit_Changes4</relationshipName>
    <type>Lookup</type>
</CustomField>