force-app/main/default/objects/Sales_Credit_Change__c/fields/Outside_Rep_1_Manager__c.field-meta.xml
<CustomField>
    <fullName>Outside_Rep_1_Manager__c</fullName>
    <formula>Outside_Rep_1__r.Manager.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Outside Rep 1 Manager</label>
    <type>Text</type>
</CustomField>