force-app/main/default/objects/Sales_Credit_Change__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <inlineHelpText>What are you requesting from this sale</inlineHelpText>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full Credit</fullName>
            </value>
            <value>
                <fullName>Shared Sale</fullName>
            </value>
            <value>
                <fullName>Same Team</fullName>
            </value>
            <value>
                <fullName>Administrative</fullName>
            </value>
            <value>
                <fullName>SDR Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>