force-app/main/default/objects/Sales_Credit_Change__c/fields/Sales_Development_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Development_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Development Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Credit_Changes5</relationshipName>
    <type>Lookup</type>
</CustomField>