force-app/main/default/objects/Sales_Credit_Change__c/fields/SDR_Manager__c.field-meta.xml
<CustomField>
    <fullName>SDR_Manager__c</fullName>
    <formula>Sales_Development_Rep__r.Manager.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDR Manager</label>
    <type>Text</type>
</CustomField>