force-app/main/default/objects/Sales_Credit_Change__c/fields/SDR_Set_URL__c.field-meta.xml
<CustomField>
    <fullName>SDR_Set_URL__c</fullName>
    <inlineHelpText>Link to the Set if this is an SDR Credit Request</inlineHelpText>
    <label>SDR Set URL</label>
    <type>Url</type>
</CustomField>