force-app/main/default/objects/Sales_Credit_Change__c/fields/Teams_Involved__c.field-meta.xml
<CustomField>
    <fullName>Teams_Involved__c</fullName>
    <inlineHelpText>What teams are included in any way on this change</inlineHelpText>
    <label>Teams Involved</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inside</fullName>
            </value>
            <value>
                <fullName>Extended</fullName>
            </value>
            <value>
                <fullName>Outside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>