force-app/main/default/objects/Sales_Credit_Change__c/validationRules/At_least_one_rep_needs_to_me_listed.validationRule-meta.xml
<ValidationRule>
    <fullName>At_least_one_rep_needs_to_me_listed</fullName>
    <active>true</active>
    <errorConditionFormula>isblank(Extended_Rep_1__c) &amp;&amp; isblank(Extended_Rep_2__c) &amp;&amp; isblank(Inside_Rep_1__c) &amp;&amp; isblank(Inside_Rep_2__c) &amp;&amp; isblank(Outside_Rep_1__c) &amp;&amp; isblank(SDR_Manager__c)</errorConditionFormula>
    <errorMessage>All reps involved on this change request must be listed.</errorMessage>
</ValidationRule>