force-app/main/default/objects/Sales_Credit_Change__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Request_Type__c</columns>
    <columns>Closed_Opp__c</columns>
    <columns>Teams_Involved__c</columns>
    <columns>Change_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Inside_Rep_1__c</columns>
    <columns>Inside_Rep_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>notEqual</operation>
        <value>SDR Credit</value>
    </filters>
    <label>All</label>
</ListView>