force-app/main/default/objects/Sales_Credit_Change__c/listViews/All_with_Notes.listView-meta.xml
<ListView>
    <fullName>All_with_Notes</fullName>
    <columns>Request_Type__c</columns>
    <columns>NAME</columns>
    <columns>Closed_Opp__c</columns>
    <columns>Teams_Involved__c</columns>
    <columns>Change_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All with Notes</label>
    <sharedTo>
        <group>ISR_Managers</group>
    </sharedTo>
</ListView>