force-app/main/default/objects/Sales_Credit_Change__c/listViews/SDR_Open_Changes.listView-meta.xml
<ListView>
    <fullName>SDR_Open_Changes</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Change_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>SDR Credit</value>
    </filters>
    <filters>
        <field>Change_Status__c</field>
        <operation>equals</operation>
        <value>Submitted,Pending</value>
    </filters>
    <label>SDR Open Changes</label>
</ListView>