force-app/main/default/objects/Sales_Credit_Change__c/listViews/Submitted.listView-meta.xml
<ListView>
    <fullName>Submitted</fullName>
    <columns>NAME</columns>
    <columns>Closed_Opp__c</columns>
    <columns>Teams_Involved__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Change_Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Change_Status__c</field>
        <operation>equals</operation>
        <value>Submitted</value>
    </filters>
    <label>Submitted</label>
</ListView>